create money_transaction
