# db/schema.rb
@@ -1,3 +1,5 @@
+# frozen_string_literal: true
+
 # This file is auto-generated from the current state of the database. Instead
 # of editing this file, please use the migrations feature of Active Record to
 # incrementally modify your database, and then regenerate this schema definition.
@@ -10,41 +12,40 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2020_05_05_054351) do
-
+ActiveRecord::Schema.define(version: 20_200_505_054_351) do
   # These are extensions that must be enabled in order to support this database
-  enable_extension "plpgsql"
+  enable_extension 'plpgsql'
 
-  create_table "money_transactions", force: :cascade do |t|
-    t.bigint "creditor_id"
-    t.bigint "debitor_id"
-    t.decimal "amount", precision: 10, scale: 2
-    t.date "paid_at"
-    t.datetime "created_at", precision: 6, null: false
-    t.datetime "updated_at", precision: 6, null: false
-    t.index ["creditor_id"], name: "index_money_transactions_on_creditor_id"
-    t.index ["debitor_id"], name: "index_money_transactions_on_debitor_id"
+  create_table 'money_transactions', force: :cascade do |t|
+    t.bigint 'creditor_id'
+    t.bigint 'debitor_id'
+    t.decimal 'amount', precision: 10, scale: 2
+    t.date 'paid_at'
+    t.datetime 'created_at', precision: 6, null: false
+    t.datetime 'updated_at', precision: 6, null: false
+    t.index ['creditor_id'], name: 'index_money_transactions_on_creditor_id'
+    t.index ['debitor_id'], name: 'index_money_transactions_on_debitor_id'
   end
 
-  create_table "users", force: :cascade do |t|
-    t.string "email", default: "", null: false
-    t.string "encrypted_password", default: "", null: false
-    t.datetime "created_at", precision: 6, null: false
-    t.datetime "updated_at", precision: 6, null: false
-    t.string "name"
-    t.string "reset_password_token"
-    t.datetime "reset_password_sent_at"
-    t.datetime "remember_created_at"
-    t.string "confirmation_token"
-    t.datetime "confirmed_at"
-    t.datetime "confirmation_sent_at"
-    t.string "unconfirmed_email"
-    t.string "jti", null: false
-    t.index ["email"], name: "index_users_on_email", unique: true
-    t.index ["jti"], name: "index_users_on_jti", unique: true
-    t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
+  create_table 'users', force: :cascade do |t|
+    t.string 'email', default: '', null: false
+    t.string 'encrypted_password', default: '', null: false
+    t.datetime 'created_at', precision: 6, null: false
+    t.datetime 'updated_at', precision: 6, null: false
+    t.string 'name'
+    t.string 'reset_password_token'
+    t.datetime 'reset_password_sent_at'
+    t.datetime 'remember_created_at'
+    t.string 'confirmation_token'
+    t.datetime 'confirmed_at'
+    t.datetime 'confirmation_sent_at'
+    t.string 'unconfirmed_email'
+    t.string 'jti', null: false
+    t.index ['email'], name: 'index_users_on_email', unique: true
+    t.index ['jti'], name: 'index_users_on_jti', unique: true
+    t.index ['reset_password_token'], name: 'index_users_on_reset_password_token', unique: true
   end
 
-  add_foreign_key "money_transactions", "users", column: "creditor_id"
-  add_foreign_key "money_transactions", "users", column: "debitor_id"
+  add_foreign_key 'money_transactions', 'users', column: 'creditor_id'
+  add_foreign_key 'money_transactions', 'users', column: 'debitor_id'
 end
